// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The HorizontalCardListFeature component should render 1`] = `
<View>
  <View
    style={
      Object {
        "paddingBottom": 8,
        "paddingHorizontal": 16,
        "paddingTop": 48,
        "paddingVertical": 0,
      }
    }
    vertical={false}
  />
  <View
    contentContainerStyle={
      Object {
        "padding": 8,
        "paddingBottom": 0,
      }
    }
    data={
      Array [
        Object {
          "__typename": "WeekendContentItem",
          "action": "READ_CONTENT",
          "actionIcon": "umbrella",
          "coverImage": Array [
            Object {
              "uri": "https://picsum.photos/800",
            },
          ],
          "hasAction": true,
          "hyphenatedTitle": "Live for Freedom Toolkit",
          "id": "WeekendContentItem:95ff79f60a028b1b506aaeedf8b4c6ae",
          "labelText": "Stormy",
          "summary": "Celebrate your freedom in Christ — in the car, shower, cubicle or wherever you go — with this playlist of NewSpring Worship's favorite songs of the summer.",
          "title": "Live for Freedom Toolkit",
        },
        Object {
          "__typename": "UniversalContentItem",
          "action": "READ_CONTENT",
          "actionIcon": null,
          "coverImage": Array [
            Object {
              "uri": "https://picsum.photos/800",
            },
          ],
          "hasAction": null,
          "hyphenatedTitle": "Live for Freedom Toolkit",
          "id": "UniversalContentItem:95ff79f60a028b1b506aaeedf8b4c6ae",
          "labelText": null,
          "summary": "Celebrate your freedom in Christ — in the car, shower, cubicle or wherever you go — with this playlist of NewSpring Worship's favorite songs of the summer.",
          "title": "Live for Freedom Toolkit",
        },
        Object {
          "__typename": "DevotionalContentItem",
          "action": "READ_CONTENT",
          "actionIcon": null,
          "coverImage": Array [
            Object {
              "uri": "https://picsum.photos/800",
            },
          ],
          "hasAction": null,
          "hyphenatedTitle": "Live for Freedom Toolkit",
          "id": "DevotionalContentItem:95ff79f60a028b1b506aaeedf8b4c6ae",
          "labelText": null,
          "summary": "Celebrate your freedom in Christ — in the car, shower, cubicle or wherever you go — with this playlist of NewSpring Worship's favorite songs of the summer.",
          "title": "Live for Freedom Toolkit",
        },
      ]
    }
    decelerationRate="fast"
    horizontal={true}
    initialScrollIndex={0}
    keyExtractor={[Function]}
    loadingStateObject={
      Object {
        "__typename": "MediaContentItem",
        "actionIcon": "umbrella",
        "channelType": "",
        "coverImage": Array [],
        "hasAction": true,
        "id": "fakeId0",
        "isLoading": true,
        "title": "Boom",
      }
    }
    refreshing={false}
    renderItem={[Function]}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={256}
  />
</View>
`;

exports[`The HorizontalCardListFeature component should render a loading state for isLoading 1`] = `
<View>
  <View
    style={
      Object {
        "paddingBottom": 8,
        "paddingHorizontal": 16,
        "paddingTop": 48,
        "paddingVertical": 0,
      }
    }
    vertical={false}
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "backgroundColor": "#dddddd",
          "borderRadius": 16,
          "height": 14,
          "marginVertical": 3.08,
          "width": "60%",
        }
      }
    />
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "backgroundColor": "#dddddd",
          "borderRadius": 16,
          "height": 36,
          "marginVertical": 2.6999999999999993,
          "width": "100%",
        }
      }
    />
  </View>
  <View
    contentContainerStyle={
      Object {
        "padding": 8,
        "paddingBottom": 0,
      }
    }
    data={
      Array [
        Object {
          "__typename": "MediaContentItem",
          "actionIcon": "umbrella",
          "channelType": "",
          "coverImage": Array [],
          "hasAction": true,
          "id": "fakeId0",
          "isLoading": true,
          "title": "Boom",
        },
        Object {
          "__typename": "MediaContentItem",
          "actionIcon": "umbrella",
          "channelType": "",
          "coverImage": Array [],
          "hasAction": true,
          "id": "fakeId1",
          "isLoading": true,
          "title": "Boom",
        },
        Object {
          "__typename": "MediaContentItem",
          "actionIcon": "umbrella",
          "channelType": "",
          "coverImage": Array [],
          "hasAction": true,
          "id": "fakeId2",
          "isLoading": true,
          "title": "Boom",
        },
        Object {
          "__typename": "MediaContentItem",
          "actionIcon": "umbrella",
          "channelType": "",
          "coverImage": Array [],
          "hasAction": true,
          "id": "fakeId3",
          "isLoading": true,
          "title": "Boom",
        },
        Object {
          "__typename": "MediaContentItem",
          "actionIcon": "umbrella",
          "channelType": "",
          "coverImage": Array [],
          "hasAction": true,
          "id": "fakeId4",
          "isLoading": true,
          "title": "Boom",
        },
      ]
    }
    decelerationRate="fast"
    fetchMore={[Function]}
    horizontal={true}
    initialScrollIndex={0}
    keyExtractor={[Function]}
    loadingStateObject={
      Object {
        "__typename": "MediaContentItem",
        "actionIcon": "umbrella",
        "channelType": "",
        "coverImage": Array [],
        "hasAction": true,
        "id": "fakeId0",
        "isLoading": true,
        "title": "Boom",
      }
    }
    refreshing={true}
    renderItem={[Function]}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={256}
  />
</View>
`;

exports[`The HorizontalCardListFeature component should render a section title 1`] = `
<View>
  <View
    style={
      Object {
        "paddingBottom": 8,
        "paddingHorizontal": 16,
        "paddingTop": 48,
        "paddingVertical": 0,
      }
    }
    vertical={false}
  >
    <Text
      numberOfLines={1}
      style={
        Object {
          "color": "#858585",
          "fontFamily": "Colfax-Medium",
          "fontSize": 14,
          "lineHeight": 20.16,
        }
      }
    >
      This renders smaller than its name would suggest
    </Text>
  </View>
  <View
    contentContainerStyle={
      Object {
        "padding": 8,
        "paddingBottom": 0,
      }
    }
    data={
      Array [
        Object {
          "__typename": "WeekendContentItem",
          "action": "READ_CONTENT",
          "actionIcon": "umbrella",
          "coverImage": Array [
            Object {
              "uri": "https://picsum.photos/800",
            },
          ],
          "hasAction": true,
          "hyphenatedTitle": "Live for Freedom Toolkit",
          "id": "WeekendContentItem:95ff79f60a028b1b506aaeedf8b4c6ae",
          "labelText": "Stormy",
          "summary": "Celebrate your freedom in Christ — in the car, shower, cubicle or wherever you go — with this playlist of NewSpring Worship's favorite songs of the summer.",
          "title": "Live for Freedom Toolkit",
        },
        Object {
          "__typename": "UniversalContentItem",
          "action": "READ_CONTENT",
          "actionIcon": null,
          "coverImage": Array [
            Object {
              "uri": "https://picsum.photos/800",
            },
          ],
          "hasAction": null,
          "hyphenatedTitle": "Live for Freedom Toolkit",
          "id": "UniversalContentItem:95ff79f60a028b1b506aaeedf8b4c6ae",
          "labelText": null,
          "summary": "Celebrate your freedom in Christ — in the car, shower, cubicle or wherever you go — with this playlist of NewSpring Worship's favorite songs of the summer.",
          "title": "Live for Freedom Toolkit",
        },
        Object {
          "__typename": "DevotionalContentItem",
          "action": "READ_CONTENT",
          "actionIcon": null,
          "coverImage": Array [
            Object {
              "uri": "https://picsum.photos/800",
            },
          ],
          "hasAction": null,
          "hyphenatedTitle": "Live for Freedom Toolkit",
          "id": "DevotionalContentItem:95ff79f60a028b1b506aaeedf8b4c6ae",
          "labelText": null,
          "summary": "Celebrate your freedom in Christ — in the car, shower, cubicle or wherever you go — with this playlist of NewSpring Worship's favorite songs of the summer.",
          "title": "Live for Freedom Toolkit",
        },
      ]
    }
    decelerationRate="fast"
    horizontal={true}
    initialScrollIndex={0}
    keyExtractor={[Function]}
    loadingStateObject={
      Object {
        "__typename": "MediaContentItem",
        "actionIcon": "umbrella",
        "channelType": "",
        "coverImage": Array [],
        "hasAction": true,
        "id": "fakeId0",
        "isLoading": true,
        "title": "Boom",
      }
    }
    refreshing={false}
    renderItem={[Function]}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={256}
  />
</View>
`;

exports[`The HorizontalCardListFeature component should render with a section subtitle 1`] = `
<View>
  <View
    style={
      Object {
        "paddingBottom": 8,
        "paddingHorizontal": 16,
        "paddingTop": 48,
        "paddingVertical": 0,
      }
    }
    vertical={false}
  >
    <Text
      style={
        Object {
          "color": "#303030",
          "fontFamily": "Colfax-Black",
          "fontSize": 36,
          "lineHeight": 41.4,
        }
      }
    >
      This renders larger than you might expect
    </Text>
  </View>
  <View
    contentContainerStyle={
      Object {
        "padding": 8,
        "paddingBottom": 0,
      }
    }
    data={
      Array [
        Object {
          "__typename": "WeekendContentItem",
          "action": "READ_CONTENT",
          "actionIcon": "umbrella",
          "coverImage": Array [
            Object {
              "uri": "https://picsum.photos/800",
            },
          ],
          "hasAction": true,
          "hyphenatedTitle": "Live for Freedom Toolkit",
          "id": "WeekendContentItem:95ff79f60a028b1b506aaeedf8b4c6ae",
          "labelText": "Stormy",
          "summary": "Celebrate your freedom in Christ — in the car, shower, cubicle or wherever you go — with this playlist of NewSpring Worship's favorite songs of the summer.",
          "title": "Live for Freedom Toolkit",
        },
        Object {
          "__typename": "UniversalContentItem",
          "action": "READ_CONTENT",
          "actionIcon": null,
          "coverImage": Array [
            Object {
              "uri": "https://picsum.photos/800",
            },
          ],
          "hasAction": null,
          "hyphenatedTitle": "Live for Freedom Toolkit",
          "id": "UniversalContentItem:95ff79f60a028b1b506aaeedf8b4c6ae",
          "labelText": null,
          "summary": "Celebrate your freedom in Christ — in the car, shower, cubicle or wherever you go — with this playlist of NewSpring Worship's favorite songs of the summer.",
          "title": "Live for Freedom Toolkit",
        },
        Object {
          "__typename": "DevotionalContentItem",
          "action": "READ_CONTENT",
          "actionIcon": null,
          "coverImage": Array [
            Object {
              "uri": "https://picsum.photos/800",
            },
          ],
          "hasAction": null,
          "hyphenatedTitle": "Live for Freedom Toolkit",
          "id": "DevotionalContentItem:95ff79f60a028b1b506aaeedf8b4c6ae",
          "labelText": null,
          "summary": "Celebrate your freedom in Christ — in the car, shower, cubicle or wherever you go — with this playlist of NewSpring Worship's favorite songs of the summer.",
          "title": "Live for Freedom Toolkit",
        },
      ]
    }
    decelerationRate="fast"
    horizontal={true}
    initialScrollIndex={0}
    keyExtractor={[Function]}
    loadingStateObject={
      Object {
        "__typename": "MediaContentItem",
        "actionIcon": "umbrella",
        "channelType": "",
        "coverImage": Array [],
        "hasAction": true,
        "id": "fakeId0",
        "isLoading": true,
        "title": "Boom",
      }
    }
    refreshing={false}
    renderItem={[Function]}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={256}
  />
</View>
`;
